manifests/traefik-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: kube-system
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - match: Host(`traefik.127.0.0.1.nip.io`)
    kind: Rule
    services:   
    - kind: TraefikService 
      name: api@internal
